# RoboticHand-Server

./: .gitignore  CMakeLists.txt  README.md  robotichand.py  server.py
include/: exception.h  robotichand.h  server.h  socket.h  socketserver.h  websocket.h
src/: main.cpp  robotichand.cpp  server.cpp  socket.cpp  socketserver.cpp  websocket.cpp
static/: communication.js
templates/: index.html  layout.html
